docs/v2.0.0/_sources/gallery/experiment/coreshell/coreshell_coupling_vs_na_cache.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/coreshell/coreshell_coupling_vs_na_cache.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_coreshell_coreshell_coupling_vs_na_cache.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_coreshell_coreshell_coupling_vs_na_cache.py:


CoreShell: Coupling vs Diameter
===============================

This example demonstrates how to compute and visualize the coupling efficiency as a function of core diameter for CoreShell scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-18

.. code-block:: Python

    import numpy
    from PyMieSim.experiment.detector import Photodiode
    from PyMieSim.experiment.scatterer import CoreShell
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material
    from PyMieSim.units import micrometer, nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 20-27

.. code-block:: Python

    source = Gaussian(
        wavelength=1.2 * micrometer,  # 1200 nm
        polarization=90 * degree,  # Polarization angle in degrees
        optical_power=1e-3 * watt,  # 1 milliwatt
        NA=0.2 * AU  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Defining the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 29-38

.. code-block:: Python

    scatterer = CoreShell(
        core_diameter=1500 * nanometer,  # Core diameters from 100 nm to 600 nm
        shell_width=800 * nanometer,  # Shell width of 800 nm
        core_property=Material.silver,  # Core material
        shell_property=Material.BK7,  # Shell material
        medium_property=1 * RIU,  # Surrounding medium's refractive index
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 39-40

Defining the detector

.. GENERATED FROM PYTHON SOURCE LINES 40-49

.. code-block:: Python

    detector = Photodiode(
        NA=[0.3] * AU,  # Numerical Apertures for the detector
        cache_NA=numpy.linspace(0.0, 0.2, 200) * AU,
        phi_offset=-180.0 * degree,  # Phi offset in degrees
        gamma_offset=0.0 * degree,  # Gamma offset in degrees
        sampling=4000 * AU,  # Number of sampling points
        polarization_filter=1 * degree
    )








.. GENERATED FROM PYTHON SOURCE LINES 50-51

Setting up the experiment

.. GENERATED FROM PYTHON SOURCE LINES 51-53

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 54-55

Measuring the coupling efficiency

.. GENERATED FROM PYTHON SOURCE LINES 55-57

.. code-block:: Python

    dataframe = experiment.get('coupling')








.. GENERATED FROM PYTHON SOURCE LINES 58-60

Plotting the results
Visualizing how the coupling efficiency varies with the core diameter.

.. GENERATED FROM PYTHON SOURCE LINES 60-61

.. code-block:: Python

    dataframe.plot_data(x="detector:cache_NA")



.. image-sg:: /gallery/experiment/coreshell/images/sphx_glr_coreshell_coupling_vs_na_cache_001.png
   :alt: coreshell coupling vs na cache
   :srcset: /gallery/experiment/coreshell/images/sphx_glr_coreshell_coupling_vs_na_cache_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='dimensionless', ylabel='watt'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.564 seconds)


.. _sphx_glr_download_gallery_experiment_coreshell_coreshell_coupling_vs_na_cache.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coreshell_coupling_vs_na_cache.ipynb <coreshell_coupling_vs_na_cache.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coreshell_coupling_vs_na_cache.py <coreshell_coupling_vs_na_cache.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coreshell_coupling_vs_na_cache.zip <coreshell_coupling_vs_na_cache.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
